-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 24
-
Component/s: hotspot
-
b25
-
x86_64
-
windows
Test gc/shenandoah/oom/TestClassLoaderLeak.java is very slow on Windows after JDK-8340490 , often times out on our Windows test machines after this change.
WithJDK-8340490 reverted, speed of the test is back to normal.
With
- relates to
-
JDK-8340490 Shenandoah: Optimize ShenandoahPacer
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk/cd45ba32
-
Review(master)
openjdk/jdk/22172