src/hotspot/share/gc/shenandoah/shenandoahPacer.hpp
@@ -129,7 +129,7 @@ private:
 
   size_t update_and_get_progress_history();
 
-  void wait(size_t time_ms);
+  void wait(size_t time_ms, jlong deadline);
 };
 
 #endif // SHARE_GC_SHENANDOAH_SHENANDOAHPACER_HPP
